# araig_test_stack

./: .gitignore  README.md  requirement.txt
.github/workflows/: build.yml
araig_calculators/: CMakeLists.txt  README.md  package.xml  setup.py
araig_calculators/config/: multi_logging.yaml  test1_multiplot.xml  test_calculators.yaml  test_rosbagger.yaml
araig_calculators/launch/: test_float_series_logger.launch  test_folder_bagger.launch  test_multiple_logging.launch  test_pose_series_logger.launch  test_result_logger.launch  test_rosbagger.launch  test_rosparam_logger.launch
araig_calculators/scripts/: comp_param_node  comp_poses_node  comp_topics_node  diff_pose_temporal_node  diff_poses_spatial_node  diff_time_node  edge_detector_node  float_series_logger_node  folder_bagger_node  folderlogger_node  pose_series_logger_node  results_logger_node  rosbagger_node  rosparam_logger_node
araig_calculators/src/base_classes/: base.py  base_calculator.py  base_logger.py  base_time_series_logger.py
araig_calculators/src/comparators/: comp_param.py  comp_poses.py  comp_topics.py  edge_detector.py
araig_calculators/src/difference/: diff_pose_temporal.py  diff_poses_spatial.py  diff_time.py
araig_calculators/src/loggers/: float_time_series_logger.py  folder_bagger.py  folder_logger.py  pose_time_series_logger.py  results_logger.py  rosbagger_class.py  rosparam_logger.py  test.py
araig_calculators/tests/node_tests/: test_comp_param_node.py  test_comp_param_node.test  test_comp_poses_node.py  test_comp_poses_node.test  test_comp_topics_node.py  test_comp_topics_node.test  test_diff_pose_temporal_node.py  test_diff_pose_temporal_node.test  test_diff_poses_spatial_node.py  test_diff_poses_spatial_node.test  test_diff_time_node.py  test_diff_time_node.test  test_edge_detector_node.py  test_edge_detector_node.test  test_folder_bagger_node.py  test_folder_bagger_node.test  test_folder_logger_node.py  test_folder_logger_node.test  test_multi_logging.test  test_rosparam_logger_node.test
araig_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
araig_gui/include/araig_gui/: araig_gui.h  my_plugin.h
araig_gui/launch/: araig_gui.launch
araig_gui/scripts/: araig_gui  my_plugin
araig_gui/src/araig_gui/: araig_gui.cpp  araig_gui.ui  my_plugin.cpp
araig_gui/test/: test_araig_gui.py
araig_interpreters/: CMakeLists.txt  README.md  package.xml  setup.py
araig_interpreters/config/: test_interpreters.yaml
araig_interpreters/include/location_interpreters/: marvel_interpreter.hpp  vicon_interpreter.hpp
araig_interpreters/launch/: test_goal_interpreter.launch  test_marvel_interpreter.launch  test_pose_tf_broadcaster.launch  test_velocity_interpreter.launch  test_vicon_interpreter.launch  test_vicon_interpreter_2.launch  test_vicon_interpreter_bag.launch
araig_interpreters/record/: vicon_1_object.bag  vicon_2_objects.bag  vicon_data.bag
araig_interpreters/scripts/: goal_interpreter  goal_pose_tf_broadcaster  goal_pose_tf_publisher.py  pose_tf_broadcaster  velocity_interpreter
araig_interpreters/src/command_interpreters/: goal_interpreter_class.py  velocity_interpreter_class.py
araig_interpreters/src/location_interpreters/: marvel_interpreter.cpp  vicon_interpreter.cpp  vicon_interpreter_node.cpp
araig_interpreters/tests/: test_goal_interpreter.py  test_goal_interpreter.test  test_goal_interpreter_action.py  test_goal_interpreter_action.test  test_velocity_interpreter.py  test_velocity_interpreter.test
araig_interpreters/tests/config/: test_goal_interpreter.yaml  test_goal_interpreter_action.yaml  test_velocity_interpreter.yaml
araig_msgs/: CMakeLists.txt  package.xml
araig_msgs/msg/: araig_msg.msg
araig_test_descriptions/: README.md
araig_test_descriptions/Test1/: readme.md  test1_bringup.yaml  test1_calculators.yaml  test1_interfaces.yaml  test1_params.yaml
araig_test_descriptions/Test2/: ARAIG_Test2.yaml
araig_test_descriptions/Test4/: ARAIG_Test4.yaml
araig_test_descriptions/Test5/: readme.md  test5_bringup.yaml  test5_calculators.yaml  test5_interfaces.yaml  test5_params.yaml
araig_test_gui/: CMakeLists.txt  package.xml
araig_test_gui/launch/: test_gui.launch
araig_test_gui/src/: ros_gui.kv  simple_gui.py
araig_test_runners/: CMakeLists.txt  README.md  package.xml  setup.py
araig_test_runners/launch/: bench_braking.launch  test_1_braking.launch  test_1_emergency.launch  test_3.launch  test_4.launch  test_4_no_goal.launch  test_4_static_obstacle.launch  test_5_obstacle_avoidence.launch  test_5_with_nav.launch  test_5_without_goal.launch  test_5_without_nav.launch
araig_test_runners/scripts/: bench_braking  test_1_braking  test_1_emergency  test_3  test_4  test_4_no_goal  test_4_static_obstacle  test_5_obstacle_avoidance  test_5_with_nav  test_5_without_goal  test_5_without_nav
araig_test_runners/src/base/: base_runner.py
araig_test_stack/: CMakeLists.txt  package.xml
araig_utils/: CMakeLists.txt  README.md  package.xml
araig_utils/launch/: export.launch  export2.launch  export_video.sh
turtlebot3_sim_tests/config/: test1_braking.yaml  test1_emergency.yaml  test3.yaml  test4.yaml  test5_with_nav.yaml  test5_without_nav.yaml
turtlebot3_sim_tests/launch/: omron_nx_bridge.launch  test1_braking.launch  test1_emergency.launch  test3.launch  test4.launch  test5_with_nav.launch  test5_without_nav.launch
turtlebot3_sim_tests/tests/: test1_braking.py  test1_emergency.py  test3.test  test5_with_nav.py  test5_without_nav.py
