<?xml version="1.0"?>
<package format="2">
  <name>araig_msgs</name>
  <version>1.0.0</version>
  <description>The araig_msgs package</description>

  <maintainer email="rachel@todo.todo">rachel</maintainer>

  <author email="ruichao.wu@ipa.fraunhofer.de">ruichao</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
