<?xml version="1.0"?>
<package format="2">
  <name>araig_test_runners</name>
  <version>1.0.0</version>
  <description>The araig_test_runners package</description>

  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>
  
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">tejas</author>
  <author email="ruichao.wu@ipa.fraunhofer.de">ruichao</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
