<?xml version="1.0"?>
<package>
    <name>araig_utils</name>
    <version>0.0.0</version>
    <description>Utils for ARAIG</description>
    <maintainer email="changxuan.li@ipa.fraunhofer.de">Changxuan Li</maintainer>
    <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de@ipa.fraunhofer.de">Tejas Kumar Shastha</maintainer>
    <author email="changxuan.li@ipa.fraunhofer.de">Changxuan Li</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <!-- <build_depend>image_view</build_depend> -->
    <!-- <exec_depend>image_view</exec_depend> -->

    <export>
    </export>
</package>
