<?xml version="1.0"?>
<package>
    <name>araig_utils</name>
    <version>0.0.0</version>
    <description>Utils for ARAIG</description>
    <maintainer email="changxuan.li@ipa.fraunhofer.de">Changxuan Li</maintainer>
    <author email="changxuan.li@ipa.fraunhofer.de">Changxuan Li</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>